<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:background="#74d7ed">

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30sp"
            android:backgroundTint="@android:color/holo_red_light"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="80dp"
                android:text="1"
                android:background="#49D1D1"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="normal" />
            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0.3dp"
                android:layout_weight="1"
                android:minHeight="80dp"
                android:background="#49D1D1"
                android:text="2"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0.3dp"
                android:layout_marginRight="0.3dp"
                android:layout_weight="1"
                android:background="#49D1D1"
                android:minHeight="80dp"
                android:text="3"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="normal" />
            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:minHeight="80dp"
                android:text="+"
                android:background="#2c70dd"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="normal" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0.3dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="80dp"
                android:background="#49D1D1"
                android:text="4"
                android:textColor="#000000"
                android:textSize="30sp" />
            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0.3dp"
                android:layout_weight="1"
                android:minHeight="80dp"
                android:background="#49D1D1"
                android:text="5"
                android:textColor="#000000"
                android:textSize="30sp" />
            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0.3dp"
                android:layout_marginRight="0.3dp"
                android:layout_weight="1"
                android:minHeight="80dp"
                android:background="#49D1D1"
                android:text="6"
                android:textColor="#000000"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonSub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:minHeight="80dp"
                android:text="-"
                android:background="#2c70dd"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0.3dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#49D1D1"
                android:minHeight="80dp"
                android:text="7"
                android:textColor="#000000"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0.3dp"
                android:layout_weight="1"
                android:background="#49D1D1"
                android:minHeight="80dp"
                android:text="8"
                android:textColor="#000000"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0.3dp"
                android:layout_marginRight="0.3dp"
                android:layout_weight="1"
                android:background="#49D1D1"
                android:minHeight="80dp"
                android:text="9"
                android:textColor="#000000"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonMul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:background="#2c70dd"
                android:minHeight="80dp"
                android:text="*"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0.3dp"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/button10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#49D1D1"
                android:minHeight="80dp"
                android:text="."
                android:textColor="#000000"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0.3dp"
                android:layout_weight="1"
                android:background="#49D1D1"
                android:minHeight="80dp"
                android:text="0"
                android:textColor="#000000"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0.3dp"
                android:layout_marginRight="0.3dp"
                android:layout_weight="1"
                android:background="#49D1D1"
                android:minHeight="80dp"
                android:text="C"
                android:textColor="#000000"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonDiv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:minHeight="80dp"
                android:text="/"
                android:background="#2c70dd"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0.3dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/buttonEql"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:minHeight="80dp"
                android:text="="
                android:background="#4286f4"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>



